@@ -37,6 +37,7 @@
 #    3-Apr-2025  dwp Add support for IHM model file loading;
 #                    Add support for inputPathList argument with REMOTE loading to enable explicit specification of
 #                    local and remote input file paths (e.g. non-archive files)
+#   24-Apr-2025   bv Add a fix to handle merging of duplicated and partially populated data categories in mmCIF validation reports
 ##
 """
 Utilities for scanning and accessing data in PDBx/mmCIF data in common repository file systems or via remote repository services.
@@ -302,6 +303,14 @@ class RepositoryProvider(object):
                             logger.error("locator object with leading path %r returned empty container list (%r)", dD["locator"], locatorObj)
                             raise ValueError("locator object with leading path %r returned empty container list (%r)" % (dD["locator"], locatorObj))
                         for mc in mergeL:
+                            # Interim fix for handling duplicated and partially populated data categories in vrpt mmcif files
+                            # For now, these categories are hard-coded (entry, entity, and struct_asym)
+                            if mc.exists("pdbx_vrpt_summary"): # Limit this fix to vrpt mmcif files
+                                objNameL = ["entry", "entity", "struct_asym"]
+                                for objName in objNameL:
+                                    if mc.exists(objName):
+                                        mc.remove(objName)
+                                        logger.info("Removing category %s from vrpt mmcif for entry %s", objName, mc.getName())
                             cL[mergeTarget].merge(mc)
                 else:
                     logger.error("locator object with leading path %r returned empty container list (%r)", dD["locator"], locatorObj)
